use jetbrains compose (use plugins.jetbrains.compose) replace JetPack compose-- prepare for migrate to cmp & kmp

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id("com.android.application")
     id("kotlin-android")
+    alias(libs.plugins.jetbrains.compose)
     alias(libs.plugins.kotlin.compose)
     id("org.jetbrains.kotlin.plugin.serialization")
     alias(libs.plugins.ksp)
@@ -106,19 +107,31 @@ android {
                 implementation(libs.androidx.lifecycle.runtime.compose)
 
                 implementation(libs.androidx.activity.compose)
-                //Jetpack compose
-                implementation(platform(libs.androidx.compose.bom))
-//                def composeBom = platform(libs.androidx.compose.bom)
-//                implementation(composeBom)
-                implementation(libs.androidx.compose.ui)
-                implementation(libs.androidx.compose.ui.graphics)
-                implementation(libs.androidx.compose.ui.tooling.preview)
-                implementation(libs.androidx.compose.foundation)
+//                //Jetpack compose
+//                implementation(platform(libs.androidx.compose.bom))
+////                def composeBom = platform(libs.androidx.compose.bom)
+////                implementation(composeBom)
+//                implementation(libs.androidx.compose.ui)
+//                implementation(libs.androidx.compose.ui.graphics)
+//                implementation(libs.androidx.compose.ui.tooling.preview)
+//                implementation(libs.androidx.compose.foundation)
+//
+//                implementation(libs.androidx.compose.material)
+//                implementation(libs.androidx.compose.material3)
+//                implementation(libs.androidx.compose.material.icons.core)
+//                implementation(libs.androidx.navigation.compose)
 
-                implementation(libs.androidx.compose.material)
-                implementation(libs.androidx.compose.material3)
-                implementation(libs.androidx.compose.material.icons.core)
-                implementation(libs.androidx.navigation.compose)
+                //jetbrains  compose
+                implementation(compose.runtime)
+                implementation(compose.foundation)
+                implementation(compose.material)
+                implementation(compose.material3)
+                implementation(compose.ui)
+                implementation(compose.components.resources)
+                implementation(compose.components.uiToolingPreview)
+                implementation(libs.jetbrains.androidx.lifecycle.viewmodel.compose)
+                implementation(libs.jetbrains.androidx.navigation.compose)
+                implementation(compose.preview)
 
                 implementation(libs.urlencoder.lib)
 
