use kotlin.multiplatform replace kotlin.android & android.kotlin.multiplatform.library replace android.library -- prepare for migrate to cmp & kmp

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -172,7 +172,9 @@ dependencies {
 
     implementation(libs.androidx.navigation.ui.ktx)
 
-
+    implementation(libs.de.ktorfit)
+    implementation(libs.de.ktorfit.converters.call)
+    implementation(libs.de.ktorfit.converters.flow)
 
     implementation(libs.koin.core)
     implementation(libs.koin.android)
