--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name">
         <activity
-            android:name="rooit.me.xo.MainActivity"
+            android:name="rooit.me.xo.ui.MainActivity"
             android:exported="true"
             tools:replace="android:exported">
             <intent-filter>
