--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 #region Base Plugin
-agp = "8.11.0" # Ref : https://developer.android.com/build/releases/past-releases
+agp = "8.11.1" # Ref : https://developer.android.com/build/releases/past-releases
 kotlin = "2.1.21"
 kotlinx-coroutines = "1.10.2"
 #region Json &  Gson & Serialization
 kotlinx-serialization = "1.9.0"
 #endregion
-ksp = "2.1.21-2.0.1"#2.2.0-2.0.2
+ksp = "2.1.21-2.0.1"# 2.1.21-2.0.1
 #endregion
 
 #region AndroidX
@@ -18,12 +18,12 @@ androidx-cardview = "1.0.0"
 androidx-material = "1.12.0"
 androidx-constraintlayout = "2.2.1"
 androidx-constraintlayout-compose = "1.1.1"
-androidx-lifecycle = "2.9.1"
+androidx-lifecycle = "2.9.2"
 androidx-lifecycle-navigation3 = "1.0.0-alpha03"
 lifecycleLivedataKtx = "2.8.6"
 lifecycleViewmodelKtx = "2.8.6"
 lifecycleRuntimeKtx = "2.8.6"
-androidx-navigation = "2.9.1"
+androidx-navigation = "2.9.2"
 androidx-navigation3 = "1.0.0-alpha05"
 androidx-splashscreen = "1.0.1"
 androidx-paging = "3.3.6"
@@ -35,7 +35,7 @@ jetpack_camera_version = '1.1.0'
 #region compose
 androidx-activity-compose = "1.10.1"
 android-compose-compiler = "1.5.15"#https://developer.android.com/jetpack/androidx/releases/compose-kotlin
-compose-bom = "2025.06.01"# Ref : https://developer.android.com/jetpack/compose/bom
+compose-bom = "2025.07.00"# Ref : https://developer.android.com/jetpack/compose/bom
 androidx-compose = "1.8.3"
 androidx-compose-material3 = "1.3.2"
 androidx-compose-material3-adaptive = "1.1.0"
@@ -50,7 +50,7 @@ jetbrains-navigation = "2.9.0-beta03"
 #region Third party
 
 #region DI
-koin = "4.0.4"
+koin = "4.1.0"
 #endregion
 
 #region BuildConfig
@@ -59,9 +59,9 @@ buildConfig = "5.6.7"
 #endregion
 
 #region Net
-ktor = "3.2.1"
+ktor = "3.2.2"
 
-ktorfit = "2.5.1"
+ktorfit = "2.5.2"#2.5.1 / 2.5.2
 retrofit2 = "3.0.0"
 retrofit2_kotlinx_serialization_converter = "1.0.0"
 okhttp = "5.1.0"
@@ -104,7 +104,7 @@ sqldelight = '2.1.0'#1.5.5
 
 #region WebView
 composeWebviewMultiplatform = "1.9.4"
-kmp_io_version="0.2.0"
+kmp_io_version="0.2.1"
 #endregion
 
 okio = "3.15.0"
@@ -429,7 +429,7 @@ stately = { module = "co.touchlab:stately-common", version="2.1.0" }
 skiko = { module = "org.jetbrains.skiko:skiko-awt-runtime-macos-arm64", version="0.9.21" }
 #https://github.com/ethauvin/urlencoder replace android.net.Uri
 urlencoder-lib= { module = "net.thauvin.erik.urlencoder:urlencoder-lib", version.ref = "urlencoder" }
-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "atomicfu" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 kmpio = { module = "io.github.skolson:kmp-io", version.ref = "kmp_io_version" }
@@ -445,7 +445,9 @@ pdfbox = { module = "org.apache.pdfbox:pdfbox", version = "3.0.5" }
 # https://github.com/vinceglb/FileKit
 filekit-core = { module = "io.github.vinceglb:filekit-core", version.ref = "filekit" }
 filekit-dialogs-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "filekit" }
-
+# Desugaring
+# https://mvnrepository.com/artifact/com.android.tools/desugar_jdk_libs
+desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugaring" }
 #endregion
 #endregion
 
